--- a/app.html
+++ b/app.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>App Name: A Coding Challenge</title>
+    <title>Rewind: A Coding Challenge</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -35,7 +35,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
           <a class="navbar-brand" href="/index.html"
-            ><img src="/img/BIconWhite.png" height="50" />&nbsp;App Name</a
+            ><img src="/img/rewind-logo-small.png" height="50" /></a
           >
           <button
             class="navbar-toggler"
@@ -63,14 +63,12 @@
                 <a class="nav-link" href="/code.html">Code</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Repo</a>
+                <a class="nav-link" href="https://github.com/BrandonLosch/rewind">Repo</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="https://brandonlosch.com/">Portfolio</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
-              </li>
+            
             </ul>
           </div>
         </div>
@@ -78,11 +76,44 @@
     </header>
 
     <main class="content container">
-      <h1>App UI goes here</h1>
-      <input id="message" placeholder="Enter a Message" />
-      <button id="btnSubmit" type="button" class="btn btn-outline-primary">
-        Display Message
-      </button>
+      <div class="row gy-2 h-100 row-cols-md-2 row-cols-1">
+        <div class="col col-lg-4 border-end">
+          <div class="fw-bold lh-1 mb-3">
+            <div class="border-bottom border-1 mb-2"><h1>Instructions</h1></div>
+            <p>Enter a string in the field and see it in reverse.</p>
+          </div>
+        </div>
+        <div class="col col-lg-8">
+          <div>
+            <h5>Enter Values</h5>
+            <form class="row gx-3 gy-2">
+              <div class="col">
+                  <input id="userString" type="text" class="form-control" placeholder="Enter a String" aria-label="Enter a String">
+              </div>
+              <div class="col-12">
+                  <button id="btnSubmit" type="button" class="btn mt-2">Reverse Me</button>
+              </div>
+              <div id="alert" class="alert alert-danger mt-5 invisible fade show" role="alert">
+                  <h4 class="alert-heading">Well Done!</h4>
+                  <hr>
+                  <p class="mb-0" id="msg">
+                      <!--Insert a Message here-->
+                  </p>
+              </div>
+          </form>
+            <!-- Result Template -->
+            <h2 class="mt-5 border-bottom border-2">Results</h2>
+            <div class="table-responsive">
+              <table class="table table-sm">
+                <tbody id="results">
+                  <!-- Results displayed here-->
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </main>
 
     <footer class="footer container-fluid p-2">
@@ -117,8 +148,8 @@
       <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
       <script>
-        document.getElementById("btnSubmit").addEventListener("click", displayMessage);
-      </script>
+        document.getElementById("btnSubmit").addEventListener("click", getValue);
+    </script>
 
     </body>
 </html>
