--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>App Name: A Coding Challenge</title>
+    <title>Rewind: A Coding Challenge</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -35,7 +35,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
           <a class="navbar-brand" href="/index.html"
-            ><img src="/img/BIconWhite.png" height="50" />&nbsp;App Name</a
+            ><img src="/img/rewind-logo-small.png" height="50" /></a
           >
           <button
             class="navbar-toggler"
@@ -66,14 +66,12 @@
                 <a class="nav-link" href="/code.html">Code</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Repo</a>
+                <a class="nav-link" href="https://github.com/BrandonLosch/rewind">Repo</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="https://brandonlosch.com/">Portfolio</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
-              </li>
+              
             </ul>
           </div>
         </div>
@@ -83,8 +81,11 @@
     <main class="content container">
       <div class="row row-cols-1 row-cols-md-2 h-100 align-items-center">
         <div class="col mt-5 mt-md-0">
-          <h1 class="display-5">App Name: Coding Challenge</h1>
-          <h4 class="lead">Your project description goes here</h4>
+          <h1 class="display-5">Rewind: A Coding Challenge</h1>
+          <h2 class="lead">There and back again. A Javascript coding exercise using arrays. Write a 
+            program that displays a string in 
+            <strong>REVERSE.</strong>
+        </h2>
           <ul class="checkList">
             <li>
               <i class="bi bi-check-square-fill"></i
@@ -102,7 +103,11 @@
               ><span> JavaScript Dom Manipulation</span>
             </li>
             <li>
-              <i class="bi bi-check-square-fill"></i><span> Boolean Logic</span>
+              <i class="bi bi-check-square-fill"></i><span> JavaScript Boolean Logic</span>
+            </li>
+            <li>
+              <i class="bi bi-check-square-fill"></i><span> JavaScript If/Then/Else
+              </span>
             </li>
           </ul>
           <div>
@@ -125,7 +130,7 @@
 
         <div class="col order-first order-md-last">
           <img
-            src="/img/APPNAMELogo.svg"
+            src="/img/Rewind_Home.png"
             class="img-fluid appLogo"
             alt="app logo" />
         </div>
